--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -63,7 +63,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@ethereumjs/common": "^4.4.0",
+		"@ethereumjs/common": "5.0.0-alpha.1",
 		"@tevm/errors": "workspace:^",
 		"@tevm/logger": "workspace:^",
 		"@tevm/utils": "workspace:^"
