--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -63,7 +63,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@ethereumjs/evm": "^3.1.1",
+		"@ethereumjs/evm": "4.0.0-alpha.1",
 		"@tevm/blockchain": "workspace:^",
 		"@tevm/common": "workspace:^",
 		"@tevm/errors": "workspace:^",
