--- a/extensions/viem/package.json
+++ b/extensions/viem/package.json
@@ -70,6 +70,7 @@
 		"@tevm/node": "workspace:^"
 	},
 	"devDependencies": {
+		"@ethereumjs/util": "^10.0.0-alpha.1",
 		"@tevm/actions": "workspace:^",
 		"@tevm/client-types": "workspace:^",
 		"@tevm/common": "workspace:^",
