--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -63,7 +63,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ethereumjs/evm": "^3.1.1"
+    "@ethereumjs/evm": "4.0.0-alpha.1"
   },
   "devDependencies": {
     "@tevm/tsconfig": "workspace:^",
