--- a/docs/node/package.json
+++ b/docs/node/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tevm": "workspace:^",
     "vitest": "^3.0.6",
     "vocs": "1.0.0-next.20250222T235036"
   },
