--- a/docs/node/package.json
+++ b/docs/node/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tevm": "workspace:^",
+    "viem": "^2.23.5",
     "vitest": "^3.0.6",
     "vocs": "1.0.0-next.20250222T235036"
   },
