--- a/bundler-packages/compiler/package.json
+++ b/bundler-packages/compiler/package.json
@@ -66,17 +66,17 @@
 		"@tevm/config": "workspace:^",
 		"@tevm/resolutions": "workspace:^",
 		"@tevm/solc": "workspace:^",
-		"@types/node": "^22.7.3",
-		"effect": "3.8.4",
-		"resolve": "^1.22.8",
+		"@types/node": "^22.13.5",
+		"effect": "3.13.2",
+		"resolve": "^1.22.10",
 		"solidity-ast": "^0.4.59"
 	},
 	"devDependencies": {
-		"@openzeppelin/contracts": "4.x.x",
+		"@openzeppelin/contracts": "5.2.0",
 		"@tevm/tsconfig": "workspace:^",
 		"@tevm/tsupconfig": "workspace:^",
 		"@types/resolve": "^1.20.6",
-		"solc": "0.8.27"
+		"solc": "0.8.28"
 	},
 	"publishConfig": {
 		"access": "public"
