--- a/cli/package.json
+++ b/cli/package.json
@@ -56,7 +56,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@tanstack/react-query": "^5.56.2",
+		"@tanstack/react-query": "^5.66.9",
 		"@tevm/actions": "workspace:^",
 		"@tevm/common": "workspace:^",
 		"@tevm/jsonrpc": "workspace:^",
@@ -66,8 +66,8 @@
 		"@types/ink-select-input": "^3.0.5",
 		"@types/object-hash": "^3.0.6",
 		"figures": "^6.1.0",
-		"fs-extra": "^11.2.0",
-		"ink": "^5.0.1",
+		"fs-extra": "^11.3.0",
+		"ink": "^5.1.0",
 		"ink-big-text": "^2.0.0",
 		"ink-gradient": "^3.0.0",
 		"ink-select-input": "^6.0.0",
@@ -75,24 +75,24 @@
 		"ink-text-input": "^6.0.0",
 		"object-hash": "^3.0.0",
 		"pastel": "^3.0.0",
-		"react": "^18.3.1",
-		"tsup": "^8.3.0",
+		"react": "^19.0.0",
+		"tsup": "^8.4.0",
 		"unique-names-generator": "^4.7.1",
-		"zod": "^3.23.8",
-		"zustand": "5.0.0-rc.2"
+		"zod": "^3.24.2",
+		"zustand": "5.0.3"
 	},
 	"devDependencies": {
 		"@tevm/tsconfig": "workspace:^",
 		"@tevm/tsupconfig": "workspace:^",
 		"@types/fs-extra": "^11.0.4",
-		"@types/react": "^18.3.9",
-		"@vitest/coverage-v8": "^2.1.1",
-		"@vitest/ui": "^2.1.1",
-		"chalk": "^5.3.0",
+		"@types/react": "^19.0.10",
+		"@vitest/coverage-v8": "^3.0.7",
+		"@vitest/ui": "^3.0.7",
+		"chalk": "^5.4.1",
 		"ink-testing-library": "^4.0.0",
 		"rome": "^12.1.3",
-		"typescript": "^5.6.2",
-		"vitest": "^2.1.1"
+		"typescript": "^5.7.3",
+		"vitest": "^3.0.7"
 	},
 	"engines": {
 		"node": ">=16"
