--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -17,50 +17,50 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@radix-ui/react-accordion": "^1.2.0",
-		"@radix-ui/react-collapsible": "^1.1.0",
-		"@radix-ui/react-dialog": "^1.1.1",
-		"@radix-ui/react-dropdown-menu": "^2.1.1",
-		"@radix-ui/react-icons": "^1.3.0",
-		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-popover": "^1.1.1",
-		"@radix-ui/react-scroll-area": "^1.1.0",
-		"@radix-ui/react-select": "^2.1.1",
-		"@radix-ui/react-separator": "^1.1.0",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@radix-ui/react-toggle": "^1.1.0",
-		"@radix-ui/react-tooltip": "^1.1.2",
-		"@shazow/whatsabi": "^0.14.1",
-		"@tanstack/react-table": "^8.20.5",
+		"@radix-ui/react-accordion": "^1.2.3",
+		"@radix-ui/react-collapsible": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-icons": "^1.3.2",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-popover": "^1.1.6",
+		"@radix-ui/react-scroll-area": "^1.2.3",
+		"@radix-ui/react-select": "^2.1.6",
+		"@radix-ui/react-separator": "^1.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-toggle": "^1.1.2",
+		"@radix-ui/react-tooltip": "^1.1.8",
+		"@shazow/whatsabi": "^0.19.0",
+		"@tanstack/react-table": "^8.21.2",
 		"@tevm/jsonrpc": "workspace:^",
-		"class-variance-authority": "^0.7.0",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"cmdk": "^1.0.0",
-		"lucide-react": "^0.446.0",
-		"next": "14.2.13",
-		"next-themes": "^0.3.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"react-use": "^17.5.1",
-		"sonner": "^1.5.0",
-		"tailwind-merge": "^2.5.2",
+		"cmdk": "^1.0.4",
+		"lucide-react": "^0.476.0",
+		"next": "15.1.7",
+		"next-themes": "^0.4.4",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-use": "^17.6.0",
+		"sonner": "^2.0.1",
+		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
 		"tevm": "workspace:^",
-		"vaul": "^1.0.0",
-		"viem": "^2.21.15",
-		"web-streams-polyfill": "^4.0.0",
-		"zustand": "5.0.0-rc.2"
+		"vaul": "^1.1.2",
+		"viem": "^2.23.5",
+		"web-streams-polyfill": "^4.1.0",
+		"zustand": "5.0.3"
 	},
 	"devDependencies": {
-		"@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-		"@types/node": "^22.7.3",
-		"@types/react": "^18.3.9",
-		"@types/react-dom": "^18.3.0",
+		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+		"@types/node": "^22.13.5",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
 		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.47",
-		"prettier": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.8",
-		"tailwindcss": "^3.4.13",
-		"typescript": "^5.6.2"
+		"postcss": "^8.5.3",
+		"prettier": "^3.5.2",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwindcss": "^4.0.9",
+		"typescript": "^5.7.3"
 	}
 }
