--- a/tevm/package.json
+++ b/tevm/package.json
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/evmts/tevm-monorepo.git",
+    "url": "git+https://github.com/evmts/tevm-monorepo.git",
     "directory": "tevm"
   },
   "license": "MIT",
@@ -359,12 +359,8 @@
   "main": "index.cjs",
   "module": "index.js",
   "types": "index.d.ts",
-  "bin": {
-    "tevm": "./bin/tevm.js"
-  },
   "files": [
     "index*",
-    "bin",
     "actions",
     "address",
     "node",
