--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "up": "bun x npm-check-updates -ui -ws"
   },
   "dependencies": {
-    "vocs": "1.0.0-next.20250220T215847"
+    "vocs": "1.0.1"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.17.4",
@@ -49,20 +49,20 @@
     "@effect/codemod": "^0.0.16",
     "@vitest/coverage-v8": "^3.0.7",
     "@vitest/ui": "^3.0.7",
-    "bun-types": "^1.2.3",
+    "bun-types": "^1.2.4",
     "concurrently": "^9.1.2",
     "depcheck": "^1.4.7",
     "dotenv": "^16.4.7",
     "gitmoji-cli": "^9.5.0",
     "jscodeshift": "^17.1.2",
     "nx": "20.4.6",
-    "publint": "^0.3.6",
-    "sort-package-json": "^2.14.0",
+    "publint": "^0.3.7",
+    "sort-package-json": "^2.15.1",
     "starlight-typedoc": "^0.20.0",
     "tsup": "^8.4.0",
     "typedoc": "^0.27.9",
     "typedoc-plugin-markdown": "4.4.2",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.2",
     "vite": "^6.2.0",
     "vitest": "^3.0.7"
   },
