:sparkles: Feat: tevmCall events
:white_check_mark: Implement it

--- a/extensions/viem/package.json
+++ b/extensions/viem/package.json
@@ -60,7 +60,7 @@
 		"lint:package": "bunx publint --strict && attw --pack",
 		"package:up": "pnpm up --latest",
 		"test": "vitest --watch",
-		"test:coverage": "vitest --coverage",
+		"test:coverage": "vitest --coverage --run",
 		"test:run": "vitest",
 		"typecheck": "tsc --noEmit"
 	},
