--- a/packages/memory-client/tsconfig.json
+++ b/packages/memory-client/tsconfig.json
@@ -6,5 +6,6 @@
 		"skipLibCheck": true,
 		"types": ["bun-types"]
 	},
-	"include": ["src"]
+	"include": ["src"],
+	"exclude": ["src/test/**/*.spec.ts"]
 }
