--- a/packages/precompiles/package.json
+++ b/packages/precompiles/package.json
@@ -57,7 +57,7 @@
     "lint:package": "bunx publint --strict && attw --pack",
     "package:up": "pnpm up --latest",
     "test": "vitest --watch",
-    "test:coverage": "vitest --coverage",
+    "test:coverage": "vitest --coverage --run",
     "test:run": "vitest"
   },
   "dependencies": {
