:white_check_mark: Test: Add more test coverage

--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -44,9 +44,6 @@
     "types"
   ],
   "scripts": {
-    "//test": "vitest --watch",
-    "//test:coverage": "vitest --coverage",
-    "//test:run": "vitest",
     "all": "pnpm i  && bun run build && bun lint && bun format && bun test:run && bun generate:docs && bun lint:deps && bun lint:package",
     "build": "nx run-many --targets=build:dist,build:types --projects=@tevm/errors",
     "build:dist": "tsup",
@@ -60,6 +57,9 @@
     "lint:deps": "bunx depcheck",
     "lint:package": "bunx publint --strict && attw --pack",
     "package:up": "pnpm up --latest",
+    "test": "vitest --watch",
+    "test:coverage": "vitest --coverage --run",
+    "test:run": "vitest --run",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -67,7 +67,8 @@
   },
   "devDependencies": {
     "@tevm/tsconfig": "workspace:^",
-    "@tevm/tsupconfig": "workspace:^"
+    "@tevm/tsupconfig": "workspace:^",
+    "vitest": "^1.2.1"
   },
   "peerDependencies": {
     "viem": "^2.21.1"
