:bug: Fix: package.json script

--- a/docs/node/package.json
+++ b/docs/node/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vocs dev",
-    "build": "vocs build",
+    "build": "bun build:app",
+    "build:app": "vocs build",
     "preview": "vocs preview",
     "test": "vitest"
   },
