--- a/packages/memory-client/package.json
+++ b/packages/memory-client/package.json
@@ -72,7 +72,8 @@
     "@tevm/node": "workspace:^",
     "@tevm/predeploys": "workspace:^",
     "@tevm/utils": "workspace:^",
-    "kzg-wasm": "^0.5.0"
+    "kzg-wasm": "^0.5.0",
+    "vitest": "^3.0.8"
   },
   "devDependencies": {
     "@tevm/test-utils": "workspace:^",
