--- a/packages/memory-client/package.json
+++ b/packages/memory-client/package.json
@@ -47,7 +47,7 @@
     "all": "pnpm i  && bun run build && bun lint && bun format && bun test:run && bun generate:docs && bun lint:deps && bun lint:package",
     "build": "nx run-many --targets=build:dist,build:types --projects=@tevm/memory-client",
     "build:dist": "tsup",
-    "build:types": "tsup --dts-only && tsc --emitDeclarationOnly --declaration",
+    "build:types": "tsup --dts-only && tsc --noEmitOnError false --emitDeclarationOnly --declaration --skipLibCheck",
     "clean": "rm -rf node_modules && rm -rf artifacts && rm -rf dist && rm -rf cache",
     "format": "biome format . --write",
     "format:check": "biome format .",
