--- a/packages/memory-client/tsconfig.json
+++ b/packages/memory-client/tsconfig.json
@@ -7,5 +7,5 @@
 		"types": ["bun-types"]
 	},
 	"include": ["src"],
-	"exclude": ["src/test/**/*.spec.ts"]
+	"exclude": ["src/test/**/*.spec.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
