--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -70,8 +70,7 @@
     "@tevm/errors": "workspace:^",
     "@tevm/jsonrpc": "workspace:^",
     "@tevm/memory-client": "workspace:^",
-    "@tevm/utils": "workspace:^",
-    "zod": "^3.24.2"
+    "@tevm/utils": "workspace:^"
   },
   "devDependencies": {
     "@tevm/actions": "workspace:^",
