:bug: Feat: add CLI bin entry point to main tevm package
  Add a bin field to tevm/package.json that proxies to the tevm-run CLI package.

--- a/tevm/package.json
+++ b/tevm/package.json
@@ -21,6 +21,9 @@
   "contributors": [
     "Will Cory <willcory10@gmail.com>"
   ],
+  "bin": {
+    "tevm": "./node_modules/tevm-run/src/tevm-run.js"
+  },
   "sideEffects": false,
   "type": "module",
   "exports": {
@@ -445,6 +448,7 @@
     "@tevm/vite-plugin": "workspace:^",
     "@tevm/vm": "workspace:^",
     "@tevm/webpack-plugin": "workspace:^",
+    "tevm-run": "workspace:^",
     "commander": "^13.1.0",
     "effect": "3.13.2",
     "glob": "^11.0.1",
