:test_tube:  test: add pending block tag tests to memory-client and actions packages
  - Enhanced memory-client tests with comprehensive pending state validation

--- a/packages/actions/tsconfig.json
+++ b/packages/actions/tsconfig.json
@@ -4,7 +4,10 @@
 		"rootDir": "src",
 		"outDir": "types",
 		"skipLibCheck": true,
-		"types": ["bun-types"]
+		"types": ["bun-types"],
+		"noImplicitAny": false,
+		"ignoreDeprecations": "5.0"
 	},
-	"include": ["src", "src/**/*.json"]
+	"include": ["src", "src/**/*.json"],
+	"exclude": ["src/test/**/*", "**/*.spec.ts", "**/*.test.ts"]
 }
