:package: Chore: Add helios (#1504)
## Description

_Concise description of proposed changes_

## Testing

Explain the quality checks that have been done on the code changes

## Additional Information

- [ ] I read the [contributing docs](../docs/contributing.md) (if this
is your first contribution)

Your ENS/address:

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/revm"]
 	path = lib/revm
 	url = https://github.com/evmts/revm
+[submodule "lib/helios"]
+	path = lib/helios
+	url = git@github.com:evmts/helios.git
