:rocket: CI/CD: Update configs and scripts for Rust integration
- Add Rust build commands to package.json\n- Update GitHub workflow to include Rust builds\n- Add Rust toolchain installation to setup action\n- Update devcontainer Dockerfile with Rust dependencies\n- Add Rust-related VSCode extensions to devcontainer\n- Update CONTRIBUTING.md with Rust information

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,7 +10,7 @@ ENV PATH="$PATH:/root/.foundry/bin"
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && \
   apt-get --yes upgrade && \
   apt-get --yes install --no-install-recommends \
-  curl sudo bash coreutils
+  curl sudo bash coreutils build-essential pkg-config libssl-dev clang
 
 # install foundry - https://getfoundry.sh/
 RUN curl --location https://foundry.paradigm.xyz | bash && \
