--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app",
     "all:clean": "bun clean && pnpm i && bun allz",
     "all:slow": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app --parallel=1",
-    "allz": "concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format",
+    "allz": "concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format,build:rust:lib",
     "build": "nx run-many --targets=build:dist,build:app,build:types",
     "build:app": "nx run-many --target=build:app",
     "build:dist": "nx run-many --target=build:dist",
     "build:types": "nx run-many --targets=build:types,typecheck",
+    "build:rust:lib": "nx run-many --target=build --projects=my_rust_node_lib",
+    "build:rust:app": "nx run-many --target=build --projects=my_rust_node_lib --configuration=production",
     "clean": "nx reset && nx run-many --target=clean && rm -rf node_modules && rm -rf .nx",
     "e2e": "nx e2e e2e",
     "format:check": "biome format .",
