:sparkles: Feat: Add event handlers to TevmMine (#1542)
_Concise description of proposed changes_

Explain the quality checks that have been done on the code changes

- [ ] I read the [contributing docs](../docs/contributing.md) (if this
is your first contribution)

Your ENS/address:

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->

- **New Features**
- Introduced an interactive Gitmoji commit hook that simplifies
selecting emojis for commit messages.
- Enhanced mining operations by enabling customizable, asynchronous
event handling for blocks, logs, and receipts, offering improved
flexibility and error feedback.
- Added new event handlers (`onBlock`, `onReceipt`, `onLog`) to the
`TevmMine` component for better monitoring of mining operations.

- **Documentation**
- Expanded and updated documentation to include detailed usage examples,
type definitions, and validation guidelines for the new mining event
capabilities.
- Introduced a new section on "Mining Events" in the Tevm API
documentation, detailing event handlers for monitoring mining
operations.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/tevm/package.json
+++ b/tevm/package.json
@@ -359,6 +359,10 @@
   "main": "index.cjs",
   "module": "index.js",
   "types": "index.d.ts",
+  "bin": {
+    "tevm": "./bin/tevm.js",
+    "tevm-gen": "./node_modules/@tevm/ts-plugin/dist/bin/tevm-gen.js"
+  },
   "files": [
     "index*",
     "actions",
@@ -392,7 +396,8 @@
     "bundler/rollup-plugin",
     "bundler/rspack-plugin",
     "bundler/vite-plugin",
-    "bundler/webpack-plugin"
+    "bundler/webpack-plugin",
+    "bin"
   ],
   "scripts": {
     "all": "bun run generate && bun run generate:docs && bun run lint:deps && bun run lint:package",
@@ -438,6 +443,7 @@
     "@tevm/solc": "workspace:^",
     "@tevm/state": "workspace:^",
     "@tevm/sync-storage-persister": "workspace:^",
+    "@tevm/ts-plugin": "workspace:^",
     "@tevm/tx": "workspace:^",
     "@tevm/txpool": "workspace:^",
     "@tevm/utils": "workspace:^",
