--- a/packages/actions/package.json
+++ b/packages/actions/package.json
@@ -84,7 +84,8 @@
     "@tevm/test-utils": "workspace:^",
     "@tevm/tsconfig": "workspace:^",
     "@tevm/tsupconfig": "workspace:^",
-    "abitype": "^1.0.8"
+    "abitype": "^1.0.8",
+    "zod": "^3.24.2"
   },
   "peerDependencies": {
     "viem": "^2.21.1"
