start adding tevm call cli

--- a/cli/package.json
+++ b/cli/package.json
@@ -16,17 +16,24 @@
 		"dist"
 	],
 	"dependencies": {
-		"@tanstack/react-query": "^5.24.1",
+		"@tanstack/react-query": "^5.67.3",
+		"@tevm/actions": "workspace:^",
+		"@tevm/jsonrpc": "workspace:^",
+		"@tevm/memory-client": "workspace:^",
+		"@types/json-bigint": "^1.0.4",
+		"figures": "^6.1.0",
 		"ink": "^4.1.0",
 		"ink-big-text": "^2.0.0",
 		"ink-gradient": "^3.0.0",
 		"ink-select-input": "^5.0.0",
 		"ink-spinner": "^5.0.0",
 		"ink-text-input": "^5.0.1",
+		"json-bigint": "^1.0.0",
 		"pastel": "^2.0.0",
 		"react": "^18.2.0",
+		"tiny-jsonc": "^1.0.2",
 		"zod": "^3.21.4",
-		"zustand": "^4.5.1"
+		"zustand": "^4.5.6"
 	},
 	"devDependencies": {
 		"@sindresorhus/tsconfig": "^3.0.1",
