feat: Generate command

--- a/cli/package.json
+++ b/cli/package.json
@@ -18,13 +18,19 @@
 	"dependencies": {
 		"@tanstack/react-query": "^5.67.3",
 		"@tevm/actions": "workspace:^",
+		"@tevm/base-bundler": "workspace:^",
+		"@tevm/bundler-cache": "workspace:^",
 		"@tevm/common": "workspace:^",
+		"@tevm/config": "workspace:^",
 		"@tevm/jsonrpc": "workspace:^",
 		"@tevm/memory-client": "workspace:^",
 		"@tevm/server": "workspace:^",
 		"@tevm/utils": "workspace:^",
+		"@types/glob": "^8.1.0",
 		"@types/json-bigint": "^1.0.4",
+		"effect": "3.13.2",
 		"figures": "^6.1.0",
+		"glob": "^11.0.1",
 		"ink": "^4.1.0",
 		"ink-big-text": "^2.0.0",
 		"ink-gradient": "^3.0.0",
@@ -34,6 +40,7 @@
 		"json-bigint": "^1.0.0",
 		"pastel": "^2.0.0",
 		"react": "^18.2.0",
+		"solc": "^0.8.23",
 		"tiny-jsonc": "^1.0.2",
 		"zod": "^3.21.4",
 		"zustand": "^4.5.6"
