--- a/cli/package.json
+++ b/cli/package.json
@@ -42,6 +42,7 @@
 		"react": "^18.2.0",
 		"solc": "^0.8.23",
 		"tiny-jsonc": "^1.0.2",
+		"viem": "^2.23.11",
 		"zod": "^3.21.4",
 		"zustand": "^4.5.6"
 	},
