--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -3,6 +3,7 @@
 	"compilerOptions": {
 		"moduleResolution": "node16",
 		"module": "Node16",
+		"checkJs": true,
 		"outDir": "dist"
 	},
 	"include": ["src"]
