--- a/cli/package.json
+++ b/cli/package.json
@@ -10,10 +10,8 @@
 	"types": "dist/cli.d.ts",
 	"exports": {
 		".": {
-			"import": {
-				"types": "./dist/cli.d.ts",
-				"default": "./dist/cli.js"
-			}
+			"types": "./dist/cli.d.ts",
+			"default": "./dist/cli.js"
 		},
 		"./package.json": "./package.json"
 	},
@@ -21,7 +19,7 @@
 		"node": ">=16"
 	},
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc --skipLibCheck && mkdir -p dist/utils && cp src/utils/bun.lockb dist/utils/",
 		"dev": "tsx src/cli.tsx",
 		"test": "prettier --check . && xo && ava"
 	},
@@ -29,7 +27,7 @@
 		"dist"
 	],
 	"dependencies": {
-		"@tanstack/react-query": "^5.67.3",
+		"@tanstack/react-query": "^5.68.0",
 		"@tevm/actions": "workspace:^",
 		"@tevm/base-bundler": "workspace:^",
 		"@tevm/bundler-cache": "workspace:^",
@@ -41,40 +39,40 @@
 		"@tevm/utils": "workspace:^",
 		"@types/glob": "^8.1.0",
 		"@types/json-bigint": "^1.0.4",
-		"effect": "3.13.2",
+		"effect": "3.13.11",
 		"figures": "^6.1.0",
 		"glob": "^11.0.1",
-		"ink": "^4.1.0",
+		"ink": "^5.2.0",
 		"ink-big-text": "^2.0.0",
 		"ink-gradient": "^3.0.0",
-		"ink-select-input": "^5.0.0",
+		"ink-select-input": "^6.0.0",
 		"ink-spinner": "^5.0.0",
-		"ink-text-input": "^5.0.1",
+		"ink-text-input": "^6.0.0",
 		"json-bigint": "^1.0.0",
-		"pastel": "^2.0.0",
-		"react": "^18.2.0",
-		"solc": "^0.8.23",
+		"pastel": "^3.0.0",
+		"react": "^18.0.0",
+		"solc": "^0.8.29",
 		"tiny-jsonc": "^1.0.2",
 		"viem": "^2.23.11",
-		"zod": "^3.21.4",
-		"zustand": "^4.5.6"
+		"zod": "^3.24.2",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@sindresorhus/tsconfig": "^3.0.1",
+		"@sindresorhus/tsconfig": "^7.0.0",
 		"@types/ink-big-text": "^1.2.4",
 		"@types/ink-gradient": "^2.0.4",
-		"@types/react": "^18.0.32",
+		"@types/react": "^18.0.0",
 		"@vdemedes/prettier-config": "^2.0.1",
-		"ava": "^5.2.0",
-		"chalk": "^5.2.0",
-		"eslint-config-xo-react": "^0.27.0",
-		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"ink-testing-library": "^3.0.0",
-		"prettier": "^2.8.7",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.0.3",
-		"xo": "^0.54.2"
+		"ava": "^6.2.0",
+		"chalk": "^5.4.1",
+		"eslint-config-xo-react": "^0.28.0",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"ink-testing-library": "^4.0.0",
+		"prettier": "^3.5.3",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.8.2",
+		"xo": "^0.60.0"
 	},
 	"ava": {
 		"extensions": {
