--- a/packages/memory-client/package.json
+++ b/packages/memory-client/package.json
@@ -64,6 +64,7 @@
   },
   "dependencies": {
     "@tevm/actions": "workspace:^",
+    "@tevm/address": "workspace:^",
     "@tevm/common": "workspace:^",
     "@tevm/contract": "workspace:^",
     "@tevm/decorators": "workspace:^",
