--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -7,14 +7,14 @@
 		"0xpolarzero"
 	],
 	"scripts": {
+		"//typecheck": "tsc --noEmit",
 		"all": "bun run format && bun run lint && bun run typecheck && bun run build",
 		"build": "next build",
 		"clean": "rm -rf .next",
 		"dev": "next dev",
 		"format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
 		"format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
-		"start": "next start",
-		"//typecheck": "tsc --noEmit"
+		"start": "next start"
 	},
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.3",
