chore: impreove jsdoc

--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "build:types": "nx run-many --targets=build:types,typecheck",
     "clean": "nx reset && nx run-many --target=clean && rm -rf node_modules && rm -rf .nx",
     "e2e": "nx e2e e2e",
+    "find-missing-jsdoc": "node scripts/jsdoc-helper/find-missing-jsdoc.js",
     "format:check": "biome format .",
     "generate:docs": "nx run-many --target=generate:docs",
+    "jsdoc:add": "node scripts/jsdoc-helper/add-jsdoc.js",
+    "jsdoc:batch": "node scripts/jsdoc-helper/batch-add-jsdoc.js",
     "lint": "biome check . --write --unsafe && biome format . --write",
     "lint:check": "biome check .",
     "lint:deps": "bunx depcheck && nx run-many --target=lint:deps",
